refactor pooling to leave room for native impl

--- a/deps/Makefile
+++ b/deps/Makefile
@@ -1,2 +1,2 @@
-libmochaext.so: im2col.cpp
-	g++ -shared -o libmochaext.so -fPIC -Wall -O3 im2col.cpp
+libmochaext.so: im2col.cpp pooling.cpp
+	g++ -shared -o libmochaext.so -fPIC -Wall -O3 -fopenmp im2col.cpp pooling.cpp
