--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ install:
 build_script:
 # Need to convert from shallow to complete for Pkg.clone to work
   - IF EXIST .git\shallow (git fetch --unshallow)
-  - C:\projects\julia\bin\julia -e 'versioninfo(); Pkg.init(); Pkg.clone(pwd())'
+  - C:\projects\julia\bin\julia -e "versioninfo(); Pkg.init(); Pkg.clone(pwd())"
 
 test_script:
-  - C:\projects\julia\bin\julia -e 'Pkg.test("Mocha")'
+  - C:\projects\julia\bin\julia -e "Pkg.test(\"Mocha\")"
