cuda elementwise operations

--- a/src/cuda/kernels/Makefile
+++ b/src/cuda/kernels/Makefile
@@ -1,2 +1,2 @@
-kernels.ptx: kernels.cu accuracy.impl logistic_loss.impl relu.impl softmax_loss.impl
+kernels.ptx: kernels.cu accuracy.impl logistic_loss.impl relu.impl softmax_loss.impl elementwise.impl
 	nvcc -ptx kernels.cu
