cuda channel pooling layer.

--- a/src/cuda/kernels/Makefile
+++ b/src/cuda/kernels/Makefile
@@ -1,2 +1,3 @@
-kernels.ptx: kernels.cu accuracy.impl logistic_loss.impl relu.impl softmax_loss.impl elementwise.impl
+kernels.ptx: kernels.cu accuracy.impl logistic_loss.impl relu.impl \
+	softmax_loss.impl elementwise.impl channel_pooling.impl
 	nvcc -ptx kernels.cu
