--- a/src/cuda/kernels/Makefile
+++ b/src/cuda/kernels/Makefile
@@ -1,3 +1,4 @@
 kernels.ptx: kernels.cu accuracy.impl logistic_loss.impl relu.impl \
-	softmax_loss.impl elementwise.impl channel_pooling.impl copy_padded.impl
+	softmax_loss.impl elementwise.impl channel_pooling.impl copy_padded.impl \
+	dropout.impl
 	nvcc -ptx kernels.cu
