--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ examples/cifar10/snapshots
 examples/ijulia/ilsvrc12/model
 *-checkpoint.ipynb
 
+examples/unsupervised-pretrain/denoising-autoencoder/finetune
+examples/unsupervised-pretrain/denoising-autoencoder/randinit
+examples/unsupervised-pretrain/denoising-autoencoder/pretrain-*
+
 docs/_build
 
 *.so
