tentative coverage hack

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,4 +31,4 @@ script:
   - julia -e 'Pkg.init(); Pkg.clone(pwd()); Pkg.test("Mocha", coverage=true)'
   - MOCHA_USE_NATIVE_EXT=true julia -e 'Pkg.build("Mocha"); Pkg.test("Mocha", coverage=true)'
 after_success:
-  - julia -e 'cd(Pkg.dir("Mocha")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  - julia -e 'cd(Pkg.dir("Mocha")); Pkg.add("Coverage"); include(joinpath(Pkg.dir("Mocha"), "tools/coverage-hack.jl")); Coveralls.submit(process_folder())'
