slightly tweak travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ notifications:
   email: false
 script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'Pkg.init(); Pkg.clone(pwd()); Pkg.test("Mocha", coverage=true)'
-  - MOCHA_USE_NATIVE_EXT=true julia -e 'Pkg.build("Mocha"); Pkg.test("Mocha", coverage=true)'
+  - julia -e 'Pkg.init(); Pkg.clone(pwd()); Pkg.build("Mocha"); Pkg.test("Mocha", coverage=true)'
+  - MOCHA_USE_NATIVE_EXT=true julia -e 'Pkg.test("Mocha", coverage=true)'
 after_success:
   - julia -e 'cd(Pkg.dir("Mocha")); Pkg.add("Coverage"); include(joinpath(Pkg.dir("Mocha"), "tools/coverage-hack.jl")); Coveralls.submit(process_folder("src",["cuda"]))'
