Manual midway point

--- a/Project.toml
+++ b/Project.toml
@@ -7,3 +7,4 @@ HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Memento = "f28f55f0-a522-5efc-85c2-fe41dfb9b2d9"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
